# perf-event

./: Cargo.toml  README.md
.github/workflows/: cargo.yml
perf-event/: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
perf-event-open-sys/: Cargo.toml  README.md  RELEASE-NOTES.md  regenerate.sh
perf-event-open-sys/src/: bindings_aarch64.rs  bindings_header.rs  bindings_riscv64gc.rs  bindings_x86_64.rs  functions.rs  lib.rs  registers.rs  version
perf-event/examples/: big-group.rs  cpufreq.rs  group.rs  insns-for-pid.rs  kprobe.rs  power.rs  println-cpi-raw.rs  println.rs  runtime-per-pid.rs  tracepoint.rs
perf-event/src/: builder.rs  counter.rs  data.rs  events.rs  flags.rs  group.rs  group_data.rs  hooks.rs  lib.rs  macros.rs  sampler.rs
perf-event/src/events/: breakpoint.rs  cache.rs  dynamic.rs  hardware.rs  mod.rs  msr.rs  probe.rs  raw.rs  software.rs  tracepoint.rs  util.rs
perf-event/src/events/x86/: mod.rs  msr.rs
perf-event/src/events/x86/intel/: mod.rs  msr.rs
perf-event/src/samples/: aux.rs  aux_output_hw_id.rs  bpf_event.rs  cgroup.rs  comm.rs  exit.rs  fork.rs  itrace_start.rs  ksymbol.rs  lost.rs  lost_samples.rs  macros.rs  mmap2.rs  mod.rs  namespaces.rs  read.rs  registers.rs  sample.rs  switch_cpu_wide.rs  text_poke.rs  throttle.rs
perf-event/tests/: breakpoint.rs
perf-event/tests/data/dyn-pmu/events/: evt1  evt1.scale  evt1.unit  evt2
perf-event/tests/data/dyn-pmu/format/: event  flag  param
perf-event/tests/sampling/: comm.rs  exit.rs  fork.rs  lost.rs  mmap.rs  mmap2.rs  mod.rs  sample.rs
