[package]
name = "perf-event2"
version = "0.7.4"
description = "A Rust interface to Linux performance monitoring"
license = "MIT OR Apache-2.0"
authors = ["Sean Lynch <sean@lynches.ca>", "Jim Blandy <jimb@red-bean.com>"]
repository = "https://github.com/Phantomical/perf-event.git"
edition = "2024"
readme = "README.md"
documentation = "https://docs.rs/perf-event2/"
keywords = ["linux", "perf"]
categories = [
    "development-tools::profiling",
    "hardware-support",
    "os::linux-apis"
]

[lib]
name = "perf_event"

[features]
# Enable syscall interception hooks for mock testing and logging.
hooks = []

[dependencies]
bitflags = "2.1"
c-enum = "0.2.0"
libc = "0.2"
memmap2 = "0.9"
perf-event-data = "0.1.8"
perf-event-open-sys2 = "5.0.4"

[dev-dependencies]
ctrlc = "3.4.5"
nix = { version = "0.29", features = ["process", "feature"] }
anyhow = "1.0"
chrono = "0.4.39"
